# Table-Relay

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  test-api.js  todo.md  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: README.md  auto-update.md
docs/dev/: adding-an-adapter.md  ai-internals.md  architecture.md  reconnect.md  store-encryption.md
docs/guide/: ai-assistant.md  ai-safety.md  connections.md  diagrams.md  import-export.md  keyboard-shortcuts.md  process-list.md  querying-and-editing.md  realtime.md  routines-and-triggers.md  settings.md  ssh-tunnels.md  workspace.md
react-source/: README.md  package-lock.json  package.json
react-source/src/: App.tsx  index.css  types.ts
react-source/src/components/: ConnectionModal.tsx  DataGrid.tsx  ERDView.tsx  ExportModal.tsx  JsonViewer.tsx  MacWindowControls.tsx  SchemaView.tsx  Sidebar.tsx  SqlEditor.tsx  TabsShell.tsx  WelcomeView.tsx  WorkspaceView.tsx
scripts/: make-dmg.sh  sign-mac.sh  sweep-target.mjs
src/: app.tsx  index.css  main.tsx  types.ts
src-adapters/mongo/: manifest.toml
src-adapters/mongo/backend/: Cargo.toml  build.rs
src-adapters/mongo/backend/src/: adapter.rs  analyze.rs  execute.rs  factory.rs  index.rs  lib.rs  mongo.rs  mutate.rs  subscribe.rs  users.rs
src-adapters/mongo/frontend/: completion-provider.ts  index.ts
src-adapters/mongo/templates/: ai_system_context.md
src-adapters/mysql/: manifest.toml
src-adapters/mysql/backend/: Cargo.toml
src-adapters/mysql/backend/src/: adapter.rs  analyze.rs  browse.rs  factory.rs  lib.rs  mutate.rs  mysql.rs
src-adapters/mysql/frontend/: index.ts
src-adapters/mysql/templates/: ai_system_context.md
src-adapters/postgres/: manifest.toml
src-adapters/postgres/backend/: Cargo.toml
src-adapters/postgres/backend/src/: adapter.rs  analyze.rs  browse.rs  factory.rs  lib.rs  mutate.rs  postgres.rs  subscribe.rs
src-adapters/postgres/frontend/: index.ts
src-adapters/postgres/templates/: ai_system_context.md
src-adapters/redis/: manifest.toml
src-adapters/redis/backend/: Cargo.toml
src-adapters/redis/backend/src/: adapter.rs  browse.rs  execute.rs  factory.rs  lib.rs  mutate.rs  redis.rs  subscribe.rs
src-adapters/redis/frontend/: index.ts
src-adapters/redis/templates/: ai_system_context.md
src-adapters/sqlite/: manifest.toml
src-adapters/sqlite/backend/: Cargo.toml
src-adapters/sqlite/backend/src/: adapter.rs  browse.rs  factory.rs  lib.rs  mutate.rs  sqlite.rs
src-adapters/sqlite/frontend/: index.ts
src-adapters/sqlite/templates/: ai_system_context.md
src-tauri/: Cargo.toml  adapters.toml  build.rs  tauri.conf.json
src-tauri/adapter-api/: Cargo.toml
src-tauri/adapter-api/src/: error.rs  intent.rs  lib.rs  log.rs  manifest.rs  ssh_hosts.rs  template.rs  types.rs
src-tauri/adapter-ssh/: Cargo.toml
src-tauri/adapter-ssh/src/: known_hosts.rs  lib.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/manifest-build/: Cargo.toml
src-tauri/manifest-build/src/: lib.rs
src-tauri/src/: lib.rs  log.rs  main.rs
src-tauri/src/ai/: anthropic.rs  cli_provider.rs  cli_specs.rs  context.rs  download.rs  echo.rs  gemini.rs  http.rs  llama.rs  llama_server.rs  mcp_bridge.rs  mcp_server.rs  mcp_stdio.rs  mod.rs  models_catalog.rs  openai.rs  session.rs  sse.rs  tools.rs
src-tauri/src/ai/tools/: approval.rs  catalog.rs  dispatch.rs  mod.rs  tiers.rs
src-tauri/src/commands/: ai.rs  db.rs  foreign_import.rs  logs.rs  mod.rs  rail.rs  secure_transfer.rs  security.rs  store.rs  tableplus.rs  update.rs
src-tauri/src/commands/ai/: chat.rs  conversation.rs  mod.rs  tool_loop.rs
src-tauri/src/commands/db/: mod.rs  mutations.rs  queries.rs  realtime.rs  schema.rs  users.rs
src-tauri/src/db/: adapter_registry.rs  builtin.rs  mod.rs  reconnect.rs  registry.rs  subscriptions.rs
src-tauri/src/ssh/: known_hosts.rs  mod.rs
src-tauri/src/store/: mod.rs  repo.rs  repo_ai.rs  repo_ai_conv.rs  repo_app_state.rs  repo_rail.rs  schema.rs
src-tauri/src/store/migrations/: 0001_initial.sql  0002_marks.sql  0003_rail_tiles.sql  0004_ai_settings.sql  0005_ai_conversations.sql  0006_app_state.sql  0007_connection_tags.sql  0008_connection_tags_multi.sql
src/components/: column-resize.tsx  db-icon.tsx  destructive-confirm-dialog.tsx  dev-debug.tsx  skeleton.tsx  update-notice.tsx
src/components/ui/: calendar.tsx  dropdown-menu.tsx  progress-dialog.tsx  radio-group.tsx  scroll-area.tsx  searchable-select.tsx  select.tsx  sonner.tsx  tooltip.tsx
src/features/ai-chat/: chat-bubbles.tsx  chat-panel.tsx  chat-permissions.tsx  chat-utils.ts  conversation-history.tsx  local-model-panel.tsx
src/features/connections/: connect-picker-dialog.tsx  connection-export-dialog.tsx  connection-manager-dialog.tsx  connection-modal.tsx  connection-picker-dialog.tsx  connection-rail.tsx  connection-transfer-dialog.tsx  database-picker-dialog.tsx  import-sources.ts  import-sql-dialog.tsx
src/features/data-grid/: cell-editors.tsx  data-grid-utils.ts  data-grid.tsx  data-row.tsx  editor-kinds.ts  export-data.ts  export-modal.tsx  export-writer.ts  json-viewer.tsx  preview-marker.ts
src/features/diagram/: diagram-view.tsx
src/features/process-list/: process-list-panel.tsx
src/features/realtime/: realtime-view.tsx
src/features/routine/: routine-view.tsx
src/features/schema/: schema-ddl.ts  schema-editors.tsx  schema-types.ts  schema-view.tsx
src/features/security/: security-gate.tsx
src/hooks/: use-multi-selection.ts
src/lib/: ai-credentials.ts  ai-permissions.ts  ai.ts  app-state-store.ts  click-intent.ts  clipboard.ts  connection-display.ts  connections-store.ts  db.ts  disable-autocorrect.ts  driver-colors.ts  flog.ts  format-sql.ts  highlight.ts  markdown.ts  monaco-setup.ts  rail.ts  security.ts  settings-store.ts  storage-migration.ts  tableplus-import.ts  tag-colors.ts  update.ts
src/state/: adapter-manifests.ts  ai.ts  connections.ts  debug.ts  query-log-store.ts  query-result-cache.ts  rail.ts  tab-data-cache.ts
(+38 files in other folders)
